[tool.poetry]
name = "target-api"
version = "0.0.12"
description = "`target-api` is a Singer target for Api, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Davi Souza"]
keywords = [
    "ELT",
    "Api",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.9.0"
target-hotglue = "^0.0.7"
curlify = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.9.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_api"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_api"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-api = 'target_api.target:TargetApi.cli'
